# download-from-server

./: Cargo.toml  README.md  install.sh  uninstall.sh
.claude/: settings.local.json
src/: cli.rs  config.rs  error.rs  main.rs  ssh.rs
