[package]
name = "download-from-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "download-from-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
console = "0.15"